Anidaciones, extends en sass, animaciones, meta keywords y description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Juguetería mayorista y minorista, Somos líderes en diversión. Aboná en 3 Cuotas Sin Interés! Envíos a todo el país, Envios 24 hs AMBA." />
+  <meta name="keywords"
+    content="CREATIVIDAD, JUEGOS DE MESA, LIBROS, PIZARRAS, MASAS, PLASTILINAS, BURBUJEROS, DISFRACES, METEGOLES, BICICLETAS, TRICICLOS, SKATES, MONOPATINES, ROLLERS, PATINES, INFLABLES, PELOTEROS, PAW PATROL, TOY STORY, CARS, PLAYMOBIL, SCOOBY DOO, PJ MASKS, FROZEN, NERF, MICKEY MOUSE, PEPPA PIG, LEGO, LA GRANJA DE ZENON, MUÑECAS, MUÑECOS Y PELUCHES, PRIMERA INFANCIA, CUNAS Y RODADOS, DIDÁCTICOS, JUGUETES" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- BOOSTRAP -->
@@ -174,7 +177,7 @@
     <!-- FIN BLOQUE PRODUCTOS -->
 
     <!-- BLOQUE NOVEDADES -->
-    <div class="row align-items-md-stretch py-5 mx-auto mb-3qu">
+    <div class="row align-items-md-stretch py-3 mx-auto mb-3qu">
       <div class="col-md-6 p-2">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>NUEVO!! Set Advengers</h2>
@@ -226,32 +229,33 @@
   <footer class="boxfooter container-fluid">
     <div class="row footer-prim">
       <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-        <img src="imagenes/foot-email.png" alt="email">
-        <h6>ESCRIBINOS</h6>
+        <i class="fa-solid fa-envelope"></i>
+        <h3>ESCRIBINOS</h3>
         <a id="a-link" href="mailto: info@manzanaverdejuguetes.com">info@manzanaverdejuguetes.com</a>
 
       </div>
       <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-        <img src="imagenes/foot-map.png" alt="maps">
+        <i class="fa-solid fa-location-dot"></i>
 
-        <h6>VISITANOS</h6>
+        <h3>VISITANOS</h3>
         <a id="a-link"
           href="https://www.google.com/maps?q=Donidea,+e+Campos+1966,+San+Mart%C3%ADn,+Buenos+Aires,+Argentina"
           target="_blank">Intendente Campos 1966, San Martín</a>
 
       </div>
       <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-        <img src="imagenes/foot-phone.png" alt="phone">
+        <i class="fa-solid fa-phone"></i>
 
-        <h6>VENTA TELEFÓNICA</h6>
+
+        <h3>VENTA TELEFÓNICA</h3>
         <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
 
       </div>
       <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
 
-        <img src="imagenes/foot-wapp.png" alt="whatsapp">
+        <i class="fa-brands fa-whatsapp"></i>
 
-        <h6>CONTACTANOS</h6>
+        <h3>CONTACTANOS</h3>
         <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
 
       </div>
