--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-
+  <meta name="description" content="Juguetería mayorista y minorista, Siempre a la vanguardia. Tenemos las mejores novedades del rubro." />
+  <meta name="keywords"
+    content="CREATIVIDAD, JUEGOS DE MESA, LIBROS, PIZARRAS, MASAS, PLASTILINAS, BURBUJEROS, DISFRACES, METEGOLES, BICICLETAS, TRICICLOS, SKATES, MONOPATINES, ROLLERS, PATINES, INFLABLES, PELOTEROS, PAW PATROL, TOY STORY, CARS, PLAYMOBIL, SCOOBY DOO, PJ MASKS, FROZEN, NERF, MICKEY MOUSE, PEPPA PIG, LEGO, LA GRANJA DE ZENON, MUÑECAS, MUÑECOS Y PELUCHES, PRIMERA INFANCIA, CUNAS Y RODADOS, DIDÁCTICOS, JUGUETES" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,7 +21,7 @@
 
   <link rel="icon" type="image/png" href="../imagenes/favicon.png">
 
-  <title>MANZANA VERDE</title>
+  <title>MANZANA VERDE - NOVEDADES</title>
 </head>
 
 <body>
@@ -221,61 +223,63 @@
 
   </main>
 
-  <!-- FOOTER -->
+ <!-- FOOTER -->
 
-  <footer class="boxfooter container-fluid">
-    <div class="row footer-prim">
-      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-        <img src="../imagenes/foot-email.png" alt="email">
-        <h6>ESCRIBINOS</h6>
-        <a id="a-link" href="mailto: info@manzanaverdejuguetes.com">info@manzanaverdejuguetes.com</a>
+ <footer class="boxfooter container-fluid">
+  <div class="row footer-prim">
+    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+      <i class="fa-solid fa-envelope"></i>
+      <h3>ESCRIBINOS</h3>
+      <a id="a-link" href="mailto: info@manzanaverdejuguetes.com">info@manzanaverdejuguetes.com</a>
 
-      </div>
-      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-        <img src="../imagenes/foot-map.png" alt="maps">
+    </div>
+    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+      <i class="fa-solid fa-location-dot"></i>
 
-        <h6>VISITANOS</h6>
-        <a id="a-link"
-          href="https://www.google.com/maps?q=Donidea,+e+Campos+1966,+San+Mart%C3%ADn,+Buenos+Aires,+Argentina"
-          target="_blank">Intendente Campos 1966, San Martín</a>
+      <h3>VISITANOS</h3>
+      <a id="a-link"
+        href="https://www.google.com/maps?q=Donidea,+e+Campos+1966,+San+Mart%C3%ADn,+Buenos+Aires,+Argentina"
+        target="_blank">Intendente Campos 1966, San Martín</a>
 
-      </div>
-      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-        <img src="../imagenes/foot-phone.png" alt="phone">
+    </div>
+    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+      <i class="fa-solid fa-phone"></i>
+      
 
-        <h6>VENTA TELEFÓNICA</h6>
-        <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
+      <h3>VENTA TELEFÓNICA</h3>
+      <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
 
-      </div>
-      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+    </div>
+    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
 
-        <img src="../imagenes/foot-wapp.png" alt="whatsapp">
+      <i class="fa-brands fa-whatsapp"></i>
 
-        <h6>CONTACTANOS</h6>
-        <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
+      <h3>CONTACTANOS</h3>
+      <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
 
-      </div>
     </div>
 
-    <div class="row">
-      <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
-        <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
-      </div>
-      <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
+  </div>
 
-        <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      </div>
-      <div class="col-xl-6 col-md-4 col-sm-12 p-3 text-center">
-        <p>Defensa de las y los Consumidores. Para reclamos <a
-            href="https://www.argentina.gob.ar/economia/comercio/defensadelconsumidor" target="_blank">ingrese aquí.</a>
-        </p>
-      </div>
+  <div class="row">
+    <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
+      <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
     </div>
+    <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
+
+      <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+    <div class="col-xl-6 col-md-4 col-sm-12 p-3 text-center">
+      <p>Defensa de las y los Consumidores. Para reclamos <a
+          href="https://www.argentina.gob.ar/economia/comercio/defensadelconsumidor" target="_blank">ingrese aquí.</a>
+      </p>
+    </div>
+  </div>
 
 
-  </footer>
-  <!-- FIN FOOTER -->
+</footer>
+<!-- FIN FOOTER -->  
 
   <!-- WHATSAPP -->
   <a href="https://web.whatsapp.com/" class="whatsapp">
