Se agrego texto en nosotros, contenido en contacto y un if en galeria

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Juguetería mayorista y minorista, Contactanos y nos comunicaremos contigo, brindamos ascesoramiento las 24 hs." />
+  <meta name="description"
+    content="Juguetería mayorista y minorista, Contactanos y nos comunicaremos contigo, brindamos ascesoramiento las 24 hs." />
   <meta name="keywords"
     content="CREATIVIDAD, JUEGOS DE MESA, LIBROS, PIZARRAS, MASAS, PLASTILINAS, BURBUJEROS, DISFRACES, METEGOLES, BICICLETAS, TRICICLOS, SKATES, MONOPATINES, ROLLERS, PATINES, INFLABLES, PELOTEROS, PAW PATROL, TOY STORY, CARS, PLAYMOBIL, SCOOBY DOO, PJ MASKS, FROZEN, NERF, MICKEY MOUSE, PEPPA PIG, LEGO, LA GRANJA DE ZENON, MUÑECAS, MUÑECOS Y PELUCHES, PRIMERA INFANCIA, CUNAS Y RODADOS, DIDÁCTICOS, JUGUETES" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,15 +73,13 @@
 
   <main>
 
-    <h1 class="text-center shadow">CONTACTO</h1>
-
+    <h1 class="text-center shadow">CONTACTOS</h1>
 
     <!-- FORMULARIO CONTACTO -->
-    <section class="container mb-4">
+    <section class="container-fluid mb-4">
       <div class="row">
-
-        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-          <h6 class="mb-4">Formulario de Contacto</h6>
+        <div class="col-lg-6 col-md-6 col-sm-12 text-center p-3">
+          <h2 id="titulo-formulario">Formulario de Contacto</h2>
           <form class="form-contacto">
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre:</label>
@@ -98,69 +97,91 @@
           </form>
         </div>
 
+        <div class="col-lg-6 col-md-6 col-sm-12 text-center p-3">
+
+          <h3 class="mb-3">COMPRAS Y CONSULTAS</h3>
+
+          <p><a href="mailto:shop@manzanaverde.com">shop@manzanaverde.com</a></p>
+
+          <p><span>Registro:</span> Regístrate como cliente mayorista en nuestra plataforma en línea o comunícate con nuestro equipo
+            de ventas para obtener acceso exclusivo a nuestras ofertas mayoristas.</p>
+          <p>
+            <span>Exploración del Catálogo:</span> Descubre nuestra amplia gama de productos y encuentra las mejores opciones para tu
+            negocio.</p>
+          <p>
+            <span> Realización del Pedido:</span> Coloca tus pedidos de manera conveniente, ya sea en línea o a través de nuestro
+            equipo de ventas.</p>
+          <p>
+            <span>Entrega Rápida:</span> Nos esforzamos por procesar y entregar tus pedidos de manera rápida y eficiente, para que
+            puedas abastecer tu inventario sin demoras.</p>
+
+
+
+        </div>
+      </div>
     </section>
 
     <!-- FIN FORMULARIO CONTACTO -->
 
   </main>
 
- <!-- FOOTER -->
+  <!-- FOOTER -->
 
- <footer class="boxfooter container-fluid">
-  <div class="row footer-prim">
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-      <i class="fa-solid fa-envelope"></i>
-      <h3>ESCRIBINOS</h3>
-      <a id="a-link" href="mailto: info@manzanaverdejuguetes.com">info@manzanaverdejuguetes.com</a>
+  <footer class="boxfooter container-fluid">
+    <div class="row footer-prim">
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+        <i class="fa-solid fa-envelope"></i>
+        <h3>ESCRIBINOS</h3>
+        <a id="a-link" href="mailto: info@manzanaverdejuguetes.com">info@manzanaverdejuguetes.com</a>
+
+      </div>
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+        <i class="fa-solid fa-location-dot"></i>
+
+        <h3>VISITANOS</h3>
+        <a id="a-link"
+          href="https://www.google.com/maps?q=Donidea,+e+Campos+1966,+San+Mart%C3%ADn,+Buenos+Aires,+Argentina"
+          target="_blank">Intendente Campos 1966, San Martín</a>
+
+      </div>
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+        <i class="fa-solid fa-phone"></i>
+
+
+        <h3>VENTA TELEFÓNICA</h3>
+        <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
+
+      </div>
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+
+        <i class="fa-brands fa-whatsapp"></i>
+
+        <h3>CONTACTANOS</h3>
+        <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
+
+      </div>
 
     </div>
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-      <i class="fa-solid fa-location-dot"></i>
 
-      <h3>VISITANOS</h3>
-      <a id="a-link"
-        href="https://www.google.com/maps?q=Donidea,+e+Campos+1966,+San+Mart%C3%ADn,+Buenos+Aires,+Argentina"
-        target="_blank">Intendente Campos 1966, San Martín</a>
+    <div class="row">
+      <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
+        <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
+      </div>
+      <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
 
-    </div>
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-      <i class="fa-solid fa-phone"></i>
-      
-
-      <h3>VENTA TELEFÓNICA</h3>
-      <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
-
-    </div>
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-
-      <i class="fa-brands fa-whatsapp"></i>
-
-      <h3>CONTACTANOS</h3>
-      <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
-
+        <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+      <div class="col-xl-6 col-md-4 col-sm-12 p-3 text-center">
+        <p>Defensa de las y los Consumidores. Para reclamos <a
+            href="https://www.argentina.gob.ar/economia/comercio/defensadelconsumidor" target="_blank">ingrese aquí.</a>
+        </p>
+      </div>
     </div>
 
-  </div>
 
-  <div class="row">
-    <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
-      <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
-    </div>
-    <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
-
-      <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-    </div>
-    <div class="col-xl-6 col-md-4 col-sm-12 p-3 text-center">
-      <p>Defensa de las y los Consumidores. Para reclamos <a
-          href="https://www.argentina.gob.ar/economia/comercio/defensadelconsumidor" target="_blank">ingrese aquí.</a>
-      </p>
-    </div>
-  </div>
-
-
-</footer>
-<!-- FIN FOOTER -->
+  </footer>
+  <!-- FIN FOOTER -->
 
   <!-- WHATSAPP -->
   <a href="https://web.whatsapp.com/" class="whatsapp" target="_blank">
