--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -86,16 +86,9 @@
                 JUGUETERIA MANZANA VERDE</p>
             </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, facere explicabo labore illum
-              blanditiis consequatur magnam dolores voluptate sapiente optio numquam quo dicta facilis? Alias optio
-              harum
-              placeat sed.</p>
+            <p>Ns apasiona brindar experiencias inolvidables a niños de todas las edades. Fundada con amor y dedicación, nuestra juguetería se esfuerza por ser más que un simple lugar para comprar juguetes; somos un rincón mágico donde los sueños cobran vida.</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, similique necessitatibus eligendi qui
-              tempore,
-              omnis quis laborum reiciendis ipsam inventore tempora facere doloremque non labore architecto aperiam
-              nihil
-              obcaecati! Et.</p>
+              Nuestra misión es inspirar la creatividad y fomentar el desarrollo a través del juego. Creemos en la importancia del juego para el crecimiento de los niños, y nos esforzamos por ofrecer una cuidada selección de juguetes que estimulen la imaginación, promuevan el aprendizaje y, sobre todo, proporcionen diversión sin fin.</p>
           </div>
 
           <div class="col-10 col-sm-8 col-md-6 m-auto"><img class="w-100" src="../imagenes/jugueteria.jpg"
