Modificaciones luego de la revision

--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Juguetería mayorista y minorista, Siempre a la vanguardia. Tenemos las mejores novedades del rubro." />
+  <meta name="description"
+    content="Juguetería mayorista y minorista, Siempre a la vanguardia. Tenemos las mejores novedades del rubro." />
   <meta name="keywords"
     content="CREATIVIDAD, JUEGOS DE MESA, LIBROS, PIZARRAS, MASAS, PLASTILINAS, BURBUJEROS, DISFRACES, METEGOLES, BICICLETAS, TRICICLOS, SKATES, MONOPATINES, ROLLERS, PATINES, INFLABLES, PELOTEROS, PAW PATROL, TOY STORY, CARS, PLAYMOBIL, SCOOBY DOO, PJ MASKS, FROZEN, NERF, MICKEY MOUSE, PEPPA PIG, LEGO, LA GRANJA DE ZENON, MUÑECAS, MUÑECOS Y PELUCHES, PRIMERA INFANCIA, CUNAS Y RODADOS, DIDÁCTICOS, JUGUETES" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -88,12 +89,10 @@
                 <div class="card h-200">
                   <div class="novedades-img1"></div>
                   <div class="card-body">
-                    <h5 class="card-title text-center">Card Titulo</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id nihil quis
-                      necessitatibus eaque, inventore illum, voluptate autem blanditiis soluta repudiandae delectus
-                      cumque
-                      a
-                      officiis. Molestiae dolores officiis facere ea?</p>
+                    <h5 class="card-title text-center">Navidad!!</h5>
+                    <p class="card-text">Sumérgete en un mundo de diversión y aventuras con las últimas adiciones a
+                      nuestra colección de juguetes. Desde creativas opciones educativas hasta emocionantes juegos de
+                      construcción!</p>
                   </div>
                   <div class="novedades-redes text-center">
                     <a href="#"><i class="fa-brands fa-facebook fa-bounce"></i></a>
@@ -107,12 +106,11 @@
                 <div class="card h-200">
                   <div class="novedades-img2"></div>
                   <div class="card-body">
-                    <h5 class="card-title text-center">Card Titulo</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id nihil quis
-                      necessitatibus eaque, inventore illum, voluptate autem blanditiis soluta repudiandae delectus
-                      cumque
-                      a
-                      officiis. Molestiae dolores officiis facere ea?</p>
+                    <h5 class="card-title text-center">Pet Shop</h5>
+                    <p class="card-text">¡Bienvenido al paraíso de las mascotas en nuestra juguetería y tienda para
+                      animales! 🐾.
+
+                      Descubre las últimas novedades que harán que la cola de tu peludo amigo no pare de moverse. </p>
                   </div>
                   <div class="novedades-redes text-center">
                     <a href="#"><i class="fa-brands fa-facebook fa-bounce"></i></a>
@@ -126,12 +124,11 @@
                 <div class="card h-200">
                   <div class="novedades-img3"></div>
                   <div class="card-body">
-                    <h5 class="card-title text-center">Card Titulo</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id nihil quis
-                      necessitatibus eaque, inventore illum, voluptate autem blanditiis soluta repudiandae delectus
-                      cumque
-                      a
-                      officiis. Molestiae dolores officiis facere ea?</p>
+                    <h5 class="card-title text-center">Star Wars</h5>
+                    <p class="card-text"> ¡Viaja a una galaxia muy, muy lejana con nuestra colección de productos de
+                      Star Wars! 🚀
+                      Descubre una amplia gama de productos, desde camisetas hasta tazas, con los personajes más
+                      icónicos de Star Wars. </p>
                   </div>
                   <div class="novedades-redes text-center">
                     <a href="#"><i class="fa-brands fa-facebook fa-bounce"></i></a>
@@ -150,12 +147,10 @@
                 <div class="card h-200">
                   <div class="novedades-img4"></div>
                   <div class="card-body">
-                    <h5 class="card-title text-center">Card Titulo</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id nihil quis
-                      necessitatibus eaque, inventore illum, voluptate autem blanditiis soluta repudiandae delectus
-                      cumque
-                      a
-                      officiis. Molestiae dolores officiis facere ea?</p>
+                    <h5 class="card-title text-center">Robots</h5>
+                    <p class="card-text"> ¡Explora un mundo futurista y desata la imaginación con nuestraincreíble colección de robots en la juguetería!
+
+                    Robots Interactivos: Descubre la magia de la robótica con nuestros robots interactivos.</p>
                   </div>
                   <div class="novedades-redes text-center">
                     <a href="#"><i class="fa-brands fa-facebook fa-bounce"></i></a>
@@ -169,12 +164,9 @@
                 <div class="card h-200">
                   <div class="novedades-img5"></div>
                   <div class="card-body">
-                    <h5 class="card-title text-center">Card Titulo</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id nihil quis
-                      necessitatibus eaque, inventore illum, voluptate autem blanditiis soluta repudiandae delectus
-                      cumque
-                      a
-                      officiis. Molestiae dolores officiis facere ea?</p>
+                    <h5 class="card-title text-center">Play Mobil</h5>
+                    <p class="card-text">¡Explora un mundo de imaginación con nuestra increíble colección de Playmobil en la juguetería!
+Sumérgete en mundos detallados y cautivadores con los sets de Playmobil.</p>
                   </div>
                   <div class="novedades-redes text-center">
                     <a href="#"><i class="fa-brands fa-facebook fa-bounce"></i></a>
@@ -188,12 +180,8 @@
                 <div class="card h-200">
                   <div class="novedades-img6"></div>
                   <div class="card-body">
-                    <h5 class="card-title text-center">Card Titulo</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id nihil quis
-                      necessitatibus eaque, inventore illum, voluptate autem blanditiis soluta repudiandae delectus
-                      cumque
-                      a
-                      officiis. Molestiae dolores officiis facere ea?</p>
+                    <h5 class="card-title text-center">Aprende!!</h5>
+                    <p class="card-text">¡Bienvenido al mundo de ternura y descubrimiento para los más pequeños! Explora nuestra adorable colección de juguetes diseñados especialmente para bebés.Estimula los sentidos de tu pequeño.</p>
                   </div>
                   <div class="novedades-redes text-center">
                     <a href="#"><i class="fa-brands fa-facebook fa-bounce"></i></a>
@@ -223,63 +211,63 @@
 
   </main>
 
- <!-- FOOTER -->
+  <!-- FOOTER -->
 
- <footer class="boxfooter container-fluid">
-  <div class="row footer-prim">
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-      <i class="fa-solid fa-envelope"></i>
-      <h3>ESCRIBINOS</h3>
-      <a id="a-link" href="mailto: info@manzanaverdejuguetes.com">info@manzanaverdejuguetes.com</a>
+  <footer class="boxfooter container-fluid">
+    <div class="row footer-prim">
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+        <i class="fa-solid fa-envelope"></i>
+        <h3>ESCRIBINOS</h3>
+        <a id="a-link" href="mailto: info@manzanaverdejuguetes.com">info@manzanaverdejuguetes.com</a>
+
+      </div>
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+        <i class="fa-solid fa-location-dot"></i>
+
+        <h3>VISITANOS</h3>
+        <a id="a-link"
+          href="https://www.google.com/maps?q=Donidea,+e+Campos+1966,+San+Mart%C3%ADn,+Buenos+Aires,+Argentina"
+          target="_blank">Intendente Campos 1966, San Martín</a>
+
+      </div>
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+        <i class="fa-solid fa-phone"></i>
+
+
+        <h3>VENTA TELEFÓNICA</h3>
+        <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
+
+      </div>
+      <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
+
+        <i class="fa-brands fa-whatsapp"></i>
+
+        <h3>CONTACTANOS</h3>
+        <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
+
+      </div>
 
     </div>
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-      <i class="fa-solid fa-location-dot"></i>
 
-      <h3>VISITANOS</h3>
-      <a id="a-link"
-        href="https://www.google.com/maps?q=Donidea,+e+Campos+1966,+San+Mart%C3%ADn,+Buenos+Aires,+Argentina"
-        target="_blank">Intendente Campos 1966, San Martín</a>
+    <div class="row">
+      <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
+        <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
+      </div>
+      <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
 
-    </div>
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-      <i class="fa-solid fa-phone"></i>
-      
-
-      <h3>VENTA TELEFÓNICA</h3>
-      <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
-
-    </div>
-    <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
-
-      <i class="fa-brands fa-whatsapp"></i>
-
-      <h3>CONTACTANOS</h3>
-      <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
-
+        <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+      <div class="col-xl-6 col-md-4 col-sm-12 p-3 text-center">
+        <p>Defensa de las y los Consumidores. Para reclamos <a
+            href="https://www.argentina.gob.ar/economia/comercio/defensadelconsumidor" target="_blank">ingrese aquí.</a>
+        </p>
+      </div>
     </div>
 
-  </div>
 
-  <div class="row">
-    <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
-      <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
-    </div>
-    <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
-
-      <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-    </div>
-    <div class="col-xl-6 col-md-4 col-sm-12 p-3 text-center">
-      <p>Defensa de las y los Consumidores. Para reclamos <a
-          href="https://www.argentina.gob.ar/economia/comercio/defensadelconsumidor" target="_blank">ingrese aquí.</a>
-      </p>
-    </div>
-  </div>
-
-
-</footer>
-<!-- FIN FOOTER -->  
+  </footer>
+  <!-- FIN FOOTER -->
 
   <!-- WHATSAPP -->
   <a href="https://web.whatsapp.com/" class="whatsapp">
