--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
     <aside>
       <div class="container-fluid newsletter">
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 text-center p-3">
+          <div class="col-12 col-lg-6 col-md-6 col-sm-12 text-center p-3">
             <h3>Suscribirse a<br><b>nuestro newsletter</b></h3>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 text-center p-3">
+          <div class="col-12 col-lg-6 col-md-6 col-sm-12 text-center p-3">
             <div class="d-flex justify-content-center">
               <form class="form-news d-flex flex-row justify-content-center" role="search">
                 <input class="form-control me-2" type="search" placeholder="Ingrese su e-mail.."
