--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -86,7 +86,7 @@
                 JUGUETERIA MANZANA VERDE</p>
             </div>
 
-            <p>Ns apasiona brindar experiencias inolvidables a niños de todas las edades. Fundada con amor y dedicación, nuestra juguetería se esfuerza por ser más que un simple lugar para comprar juguetes; somos un rincón mágico donde los sueños cobran vida.</p>
+            <p>Nos apasiona brindar experiencias inolvidables a niños de todas las edades. Fundada con amor y dedicación, nuestra juguetería se esfuerza por ser más que un simple lugar para comprar juguetes; somos un rincón mágico donde los sueños cobran vida.</p>
             <p>
               Nuestra misión es inspirar la creatividad y fomentar el desarrollo a través del juego. Creemos en la importancia del juego para el crecimiento de los niños, y nos esforzamos por ofrecer una cuidada selección de juguetes que estimulen la imaginación, promuevan el aprendizaje y, sobre todo, proporcionen diversión sin fin.</p>
           </div>
