Se agrego animacion cards, se agregarons imagenes nuevas, textos para proyecto final

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -140,7 +140,7 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
-        <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
+        <a href="#"><i class="fa-solid fa-apple-whole flotante"></i> Manzana Verde</a>
       </div>
       <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
 
