--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -97,12 +97,12 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 producto">
             <a href="#" class="text-decoration-none">
-              <img src="../imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-              <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+              <img src="../imagenes/jug-2.jpg" class="w-80 foto" alt="producto">
+              <h6 class="mt-1 mb-0 name-product">CARA DE PAPA: MUÑECO CARA DE PAPA
               </h6>
-              <p class="sku">sku: 177368</p>
+              <p class="sku">sku: 177348</p>
 
-              <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+              <p class="precio mb-1">5.737,99 <del>8.737,99</del></p>
               <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
             </a>
@@ -110,12 +110,12 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 producto">
             <a href="#" class="text-decoration-none">
-              <img src="../imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-              <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+              <img src="../imagenes/jug-3.jpg" class="w-80 foto" alt="producto">
+              <h6 class="mt-1 mb-0 name-product">TRANSFORMERS: MUÑECO TRANSFORMERS ARTICULADO
               </h6>
-              <p class="sku">sku: 177368</p>
+              <p class="sku">sku: 17864567</p>
 
-              <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+              <p class="precio mb-1">15.727,00 <del>18.737,00</del></p>
               <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
             </a>
@@ -123,12 +123,12 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 producto">
             <a href="#" class="text-decoration-none">
-              <img src="../imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-              <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+              <img src="../imagenes/jug-4.jpg" class="w-80 foto" alt="producto">
+              <h6 class="mt-1 mb-0 name-product">THE GOOD DINOSAUR: FIGURA SAM COMPLETO
               </h6>
-              <p class="sku">sku: 177368</p>
+              <p class="sku">sku: 347368</p>
 
-              <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+              <p class="precio mb-1">12.00,00 <del>13.00,00</del></p>
               <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
             </a>
@@ -148,12 +148,12 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 producto">
             <a href="#" class="text-decoration-none">
-              <img src="../imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-              <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+              <img src="../imagenes/jug-5.jpg" class="w-80 foto" alt="producto">
+              <h6 class="mt-1 mb-0 name-product">CUBO MAGICO: CUBO MAGICO ULTIMO MODELO
               </h6>
-              <p class="sku">sku: 177368</p>
+              <p class="sku">sku: 1771234</p>
 
-              <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+              <p class="precio mb-1">2.737,99 <del>4.737,99</del></p>
               <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
             </a>
@@ -161,12 +161,12 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 producto">
             <a href="#" class="text-decoration-none">
-              <img src="../imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-              <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+              <img src="../imagenes/jug-6.jpg" class="w-80 foto" alt="producto">
+              <h6 class="mt-1 mb-0 name-product">MARACA UNICORNIO: MARACA DUENDE AZUL
               </h6>
-              <p class="sku">sku: 177368</p>
+              <p class="sku">sku: 177123</p>
 
-              <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+              <p class="precio mb-1">3.500,99 <del>3.900,99</del></p>
               <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
             </a>
@@ -174,12 +174,12 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 producto">
             <a href="#" class="text-decoration-none">
-              <img src="../imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-              <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+              <img src="../imagenes/jug-7.jpg" class="w-80 foto" alt="producto">
+              <h6 class="mt-1 mb-0 name-product">POW PATROL: JUEGO DE MESA POW PATROL
               </h6>
-              <p class="sku">sku: 177368</p>
+              <p class="sku">sku: 177355</p>
 
-              <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+              <p class="precio mb-1">15.737,99 <del>16.737,99</del></p>
               <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
             </a>
@@ -187,12 +187,12 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 producto">
             <a href="#" class="text-decoration-none">
-              <img src="../imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-              <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+              <img src="../imagenes/jug-8.jpg" class="w-80 foto" alt="producto">
+              <h6 class="mt-1 mb-0 name-product">ARENAS MAGICAS: JUEGO DE ARENAS MAGICAS MASAS
               </h6>
-              <p class="sku">sku: 177368</p>
+              <p class="sku">sku: 237368</p>
 
-              <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+              <p class="precio mb-1">11.737,99 <del>14.737,99</del></p>
               <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
             </a>
@@ -247,7 +247,7 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
-        <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
+        <a href="#"><i class="fa-solid fa-apple-whole flotante"></i> Manzana Verde</a>
       </div>
       <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
 
