--- a/index.html
+++ b/index.html
@@ -81,18 +81,14 @@
           aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
           aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
+
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="imagenes/slider-home-1.jpg" class="d-block  mx-auto img-fluid mb-3" alt="promocion">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/slider-home-1.jpg" class="d-block  mx-auto img-fluid mb-3" alt="promocion">
-        </div>
-        <div class="carousel-item">
-          <img src="imagenes/slider-home-1.jpg" class="d-block  mx-auto img-fluid mb-3" alt="promocion">
+          <img src="imagenes/slider-home-2.jpg" class="d-block  mx-auto img-fluid mb-3" alt="promocion">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -121,12 +117,12 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-            <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+            <img src="../imagenes/jug-5.jpg" class="w-80 foto" alt="producto">
+            <h6 class="mt-1 mb-0 name-product">CUBO MAGICO: CUBO MAGICO ULTIMO MODELO
             </h6>
-            <p class="sku">sku: 177368</p>
+            <p class="sku">sku: 1771234</p>
 
-            <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+            <p class="precio mb-1">2.737,99 <del>4.737,99</del></p>
             <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
           </a>
@@ -134,12 +130,12 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-            <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+            <img src="../imagenes/jug-6.jpg" class="w-80 foto" alt="producto">
+            <h6 class="mt-1 mb-0 name-product">MARACA UNICORNIO: MARACA DUENDE AZUL
             </h6>
-            <p class="sku">sku: 177368</p>
+            <p class="sku">sku: 177123</p>
 
-            <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+            <p class="precio mb-1">3.500,99 <del>3.900,99</del></p>
             <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
           </a>
@@ -147,12 +143,12 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-            <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+            <img src="../imagenes/jug-7.jpg" class="w-80 foto" alt="producto">
+            <h6 class="mt-1 mb-0 name-product">POW PATROL: JUEGO DE MESA POW PATROL
             </h6>
-            <p class="sku">sku: 177368</p>
+            <p class="sku">sku: 177355</p>
 
-            <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+            <p class="precio mb-1">15.737,99 <del>16.737,99</del></p>
             <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
           </a>
@@ -160,12 +156,12 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="imagenes/jug-1.jpg" class="w-80 foto" alt="producto">
-            <h6 class="mt-1 mb-0 name-product">PINYPON: CASA ROSA MALETIN+4 HABITACIONES+2 figuras 17012
+            <img src="../imagenes/jug-8.jpg" class="w-80 foto" alt="producto">
+            <h6 class="mt-1 mb-0 name-product">ARENAS MAGICAS: JUEGO DE ARENAS MAGICAS MASAS
             </h6>
-            <p class="sku">sku: 177368</p>
+            <p class="sku">sku: 237368</p>
 
-            <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
+            <p class="precio mb-1">11.737,99 <del>14.737,99</del></p>
             <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
 
           </a>
@@ -264,7 +260,7 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-4 col-sm-12 p-3 text-center">
-        <a href="#"><i class="fa-solid fa-apple-whole"></i> Manzana Verde</a>
+        <a href="#"><i class="fa-solid fa-apple-whole flotante"></i> Manzana Verde</a>
       </div>
       <div class="col-xl-3 col-md-4 col-sm-12 redes p-3 d-flex justify-content-evenly text-center">
 
