--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
         </div>
       </div>
     </div>
-    <!-- BLOQUE FIN NOVEDADES -->
-
-    <!-- NEWSLETTER -->
+    <!-- BLOQUE FIN NOVEDADES -->    <!-- NEWSLETTER -->
     <aside>
       <div class="container-fluid newsletter">
         <div class="row">
@@ -217,6 +215,7 @@
 
     </aside>
     <!-- FIN NEWSLETTER -->
+
 
   </main>
 
