Se arreglo urls de las imagenes del index.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="../imagenes/jug-5.jpg" class="w-80 foto" alt="producto">
+            <img src="./imagenes/jug-5.jpg" class="w-80 foto" alt="producto">
             <h6 class="mt-1 mb-0 name-product">CUBO MAGICO: CUBO MAGICO ULTIMO MODELO
             </h6>
             <p class="sku">sku: 1771234</p>
@@ -130,7 +130,7 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="../imagenes/jug-6.jpg" class="w-80 foto" alt="producto">
+            <img src="./imagenes/jug-6.jpg" class="w-80 foto" alt="producto">
             <h6 class="mt-1 mb-0 name-product">MARACA UNICORNIO: MARACA DUENDE AZUL
             </h6>
             <p class="sku">sku: 177123</p>
@@ -143,7 +143,7 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="../imagenes/jug-7.jpg" class="w-80 foto" alt="producto">
+            <img src="./imagenes/jug-7.jpg" class="w-80 foto" alt="producto">
             <h6 class="mt-1 mb-0 name-product">POW PATROL: JUEGO DE MESA POW PATROL
             </h6>
             <p class="sku">sku: 177355</p>
@@ -156,7 +156,7 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12 producto">
           <a href="#" class="text-decoration-none">
-            <img src="../imagenes/jug-8.jpg" class="w-80 foto" alt="producto">
+            <img src="./imagenes/jug-8.jpg" class="w-80 foto" alt="producto">
             <h6 class="mt-1 mb-0 name-product">ARENAS MAGICAS: JUEGO DE ARENAS MAGICAS MASAS
             </h6>
             <p class="sku">sku: 237368</p>
